syntax = "proto3";

package availabilitypb.mscpb;

option go_package = "github.com/filecoin-project/mir/pkg/pb/availabilitypb/mscpb";

// ============================================================
// Messages
// ============================================================

message Message {
  oneof type {
    RequestSigMessage   request_sig   = 1;
    SigMessage          sig           = 2;
    RequestBatchMessage request_batch = 3;
    ProvideBatchMessage provide_batch = 4;
  }
}

message RequestSigMessage {
  uint64         req_id = 1;
  repeated bytes txs    = 2;
}

message SigMessage {
  uint64 req_id    = 1;
  bytes  signature = 2;
}

message RequestBatchMessage {
  string source_id   = 1;
  uint64 cert_req_id = 2;
  uint64 cs_item_id  = 3;
}

message ProvideBatchMessage {
  repeated bytes txs = 1;
  uint64 cs_item_id  = 2;
}

// TODO: implement pulling of missing txs.
//message RequestMissingTxsMessage {
//  uint64         req_id = 1;
//  repeated bytes tx_ids = 2;
//}
//
//message ProvideMissingTxsMessage {
//  uint64         req_id = 1;
//  repeated bytes txs    = 2;
//}

// ============================================================
// Data structures
// ============================================================

message Cert {
  string          source_id  = 1;
  uint64          req_id     = 2;
  bytes           batch_hash = 3;
  repeated string signers    = 4;
  repeated bytes  signatures = 5;
}
